# reflex-frp.org

./: .gitignore  .gitmodules  README.md  cabal-ghcjs.project  cabal.project  default.nix
backend/: backend.cabal  frontendJs
backend/src/: Main.hs
common/: common.cabal
common/src/Common/: Route.hs
design/: README.md  gulpfile.js  package-lock.json  package.json  tailwind.config.js
design/public/: index.html
design/public/css/: main.css  tailwind.css
design/public/get-started/: index.html
design/public/resources/: index.html
design/public/tutorial/: index.html
design/src/css/: components.css  icons.css  main.css  prism.css  tailwind.css
design/src/css/text/: a.css  aside.css  code.css  h.css  hr.css  p.css
design/src/html/pages/: index.njk
design/src/html/pages/get-started/: index.njk
design/src/html/pages/resources/: index.njk
design/src/html/pages/tutorial/: index.njk
design/src/html/templates/: boilerplate.njk  layout.njk
design/src/html/templates/partials/: footer.njk  mobile-nav.njk  nav.njk
design/src/html/templates/partials/mobile-nav/: get-started.njk  resources.njk  tutorial.njk
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Examples/: CollapsingContent.hs  Todo.hs
frontend/src/Frontend/: App.hs  Example.hs  Markdown.hs  Router.hs  Util.hs
frontend/src/Frontend/Page/Examples/: CollapsingContent.hs  Todo.hs
static/: style.css
