name: common
version: 0.1
cabal-version: >= 1.24
build-type: Simple

library
  hs-source-dirs: src
  build-depends: 
    aeson,
    async,
    base,
    binary,
    bytestring,
    containers,
    data-default,
    data-default,
    deepseq,
    directory,
    file-embed,
    file-embed,
    filepath,
    font-awesome-type,
    jsaddle,
    lens,
    mtl,
    obelisk-asset-th,
    obelisk-font-awesome,
    obelisk-haskpress-frontend,
    primitive,
    reflex,
    reflex-dom,
    safe,
    template-haskell,
    text,
    these,
    time,
    transformers,
    vector
  exposed-modules:
    Common.Route
  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -Wno-simplifiable-class-constraints -fwarn-tabs -fno-warn-unused-do-bind -funbox-strict-fields -fprof-auto -rtsopts -threaded "-with-rtsopts=-T" -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: NoDatatypeContexts
  if impl(ghcjs)
    cpp-options: -DGHCJS_GC_INTERVAL=60000 -DGHCJS_BUSY_YIELD=6 -DGHCJS_SCHED_QUANTUM=5
    ghcjs-options: -dedupe
  if !os(ios) && !arch(aarch64) && !arch(arm)
    cpp-options: -DUSE_TEMPLATE_HASKELL
  if os(ios)
    if arch(aarch64)
      ld-options: -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.2.sdk
    else
      ld-options: -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.0.sdk





